--- a/src/pages/home/home.page.html
+++ b/src/pages/home/home.page.html
@@ -1,20 +1,12 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>
-      The Ionic App Template
-    </ion-title>
+    <ion-title> HOME </ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button menu="main-menu"></ion-menu-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">The Ionic App Template</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
 
-  <div id="container">
-    <strong>A basic Template to start your any Ionic projects. </strong>
-    <p>Start with Ionic!!!</p>
-  </div>
 </ion-content>
